--- a/.gitignore
+++ b/.gitignore
@@ -90,10 +90,14 @@ fastlane/test_output
 iOSInjectionProject/
 
 .DS_Store
+.swiftpm
 /.build
 /Packages
 /*.xcodeproj
 xcuserdata/
 DerivedData/
 .swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
+.idea
 /TODO
+CLAUDE.md
+.claude
